Add more content section

--- a/index.html
+++ b/index.html
@@ -147,6 +147,84 @@
               <li><svg class="social" viewBox="0 0 16 13" width="16" height="13"><path fill-rule="evenodd" clip-rule="evenodd" d="M15.406 5.359L8.978 0v3.215C3.82 3.215.406 8.107.406 12.66 1.653 9.133 4.29 7.517 8.978 7.517v3.2l6.428-5.358z" fill="#000"></path></svg></li>
             </ul>
           </div>
+          <div id="more-content">
+            <div class="header left">
+              More in Space and Astronomy
+            </div>
+            <div class="header right">
+              Most Popular
+            </div>
+            <ul class="sidebar right">
+              <li>Never Mind the Internet. Here’s What’s Killing Malls.</li>
+              <li>The Guerrilla Car Washers of N.Y.C.</li>
+              <li>When America’s Oddest Political Couple Fight, Those Sparks Are Real</li>
+              <li>Opinion: California Takes Revenge on Trump</li>
+              <li>How Cooking Dinner Can Change Your Life</li>
+              <li>They Documented the Coronavirus Crisis in Wuhan. Then They Vanished.</li>
+              <li>Cooper Hewitt Chief Was Forced Out After Probe of Her Wedding</li>
+              <li>How Trump’s Relationship With Barr Got So Complicated</li>
+              <li>How My Worst Date Ever Became My Best</li>
+              <li>Build Build Build Build Build Build Build Build Build Build Build Build Build Build</li>
+            </ul>
+            <div class="preview">
+              <img src="images/preview1.jpg" alt="">
+              <p class="preview-caption">Mohammed Bin Rashid Space Center</p>
+              <h3>From Dubai to Mars, With Stops in Colorado and Japan</h3>
+              <span class="time">7h ago</span>
+            </div>
+
+            <div class="preview">
+              <img src="images/preview1.jpg" alt="">
+              <p class="preview-caption">Mohammed Bin Rashid Space Center</p>
+              <h3>From Dubai to Mars, With Stops in Colorado and Japan</h3>
+              <span class="time">7h ago</span>
+            </div>
+            <div class="preview">
+              <img src="images/preview1.jpg" alt="">
+              <p class="preview-caption">Mohammed Bin Rashid Space Center</p>
+              <h3>From Dubai to Mars, With Stops in Colorado and Japan</h3>
+              <span class="time">7h ago</span>
+            </div>
+            <div class="preview">
+              <img src="images/preview1.jpg" alt="">
+              <p class="preview-caption">Mohammed Bin Rashid Space Center</p>
+              <h3>From Dubai to Mars, With Stops in Colorado and Japan</h3>
+              <span class="time">7h ago</span>
+            </div>
+            <div class="preview">
+              <img src="images/preview1.jpg" alt="">
+              <p class="preview-caption">Mohammed Bin Rashid Space Center</p>
+              <h3>From Dubai to Mars, With Stops in Colorado and Japan</h3>
+              <span class="time">7h ago</span>
+            </div>
+            <div class="preview">
+              <img src="images/preview1.jpg" alt="">
+              <p class="preview-caption">Mohammed Bin Rashid Space Center</p>
+              <h3>From Dubai to Mars, With Stops in Colorado and Japan</h3>
+              <span class="time">7h ago</span>
+            </div>
+            <div class="header left">
+              Editor's Picks
+            </div>
+            <div class="preview">
+              <img src="images/editor1.jpg" alt="">
+              <p class="preview-caption">Mohammed Bin Rashid Space Center</p>
+              <h3>From Dubai to Mars, With Stops in Colorado and Japan</h3>
+              <span class="time">7h ago</span>
+            </div>
+            <div class="preview">
+              <img src="images/editor1.jpg" alt="">
+              <p class="preview-caption">Mohammed Bin Rashid Space Center</p>
+              <h3>From Dubai to Mars, With Stops in Colorado and Japan</h3>
+              <span class="time">7h ago</span>
+            </div>
+            <div class="preview">
+              <img src="images/editor1.jpg" alt="">
+              <p class="preview-caption">Mohammed Bin Rashid Space Center</p>
+              <h3>From Dubai to Mars, With Stops in Colorado and Japan</h3>
+              <span class="time">7h ago</span>
+            </div>
+          </div>
       </article>
     
   </body>
