--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
             <a class="go-back" href="#">Go back to home page >></a>
           </div>
 
+        <div id="mobile-index">
           <ul>
             <li>news</li>
             <li>Opinion</li>
@@ -244,26 +245,114 @@
             <li>Living</li>
             <li>Listings & more</li>
           </ul>
+        </div>
+
+        <div id="grid-index">
+          <ul class="news">
+            <li><strong>news</strong></li>
+            <li>home page</li>
+            <li>world</li>
+            <li>U.S.</li>
+            <li>politics</li>
+            <li>Election 2020</li>
+            <li>New York</li>
+            <li>business</li>
+            <li>tech</li>
+            <li>science</li>
+            <li>sports</li>
+            <li>obituaries</li>
+            <li>today's paper</li>
+            <li>corrections</li>
+          </ul>
+          <ul class="opinion">
+            <li><strong>opinion</strong></li>
+            <li>U.S.</li>
+            <li>politics</li>
+            <li>Election 2020</li>
+            <li>New York</li>
+            <li>business</li>
+            <li>tech</li>
+            <li>science</li>
+            <li>sports</li>
+            <li>obituaries</li>
+            <li>today's paper</li>
+            <li>corrections</li>
+          </ul>
+          <ul class="arts">
+            <li><strong>arts</strong></li>
+            <li>home page</li>
+            <li>world</li>
+            <li>U.S.</li>
+            <li>politics</li>
+            <li>Election 2020</li>
+            <li>New York</li>
+            <li>business</li>
+            <li>corrections</li>
+          </ul>
+          <ul class="living">
+            <li><strong>living</strong></li>
+            <li>home page</li>
+            <li>world</li>
+            <li>U.S.</li>
+            <li>politics</li>
+            <li>Election 2020</li>
+            <li>business</li>
+            <li>sports</li>
+            <li>obituaries</li>
+            <li>today's paper</li>
+            <li>corrections</li>
+          </ul>
+          <ul class="more">
+            <li><strong>more</strong></li>
+            <li>home page</li>
+            <li>world</li>
+            <li>U.S.</li>
+            <li>politics</li>
+            <li>Election 2020</li>
+            <li>tech</li>
+            <li>science</li>
+            <li>sports</li>
+            <li>obituaries</li>
+            <li>today's paper</li>
+            <li>corrections</li>
+          </ul>
+          <ul class="network">
+            <li><strong>subscribe</strong></li>
+            <li>home page</li>
+            <li>world</li>
+            <li>U.S.</li>
+            <li>politics</li>
+            <li>Election 2020</li>
+            <li>New York</li>
+            <li>business</li>
+            <li>tech</li>
+            <li>science</li>
+            <li>sports</li>
+            <li>obituaries</li>
+            <li>today's paper</li>
+            <li>corrections</li>
+          </ul>
+        </div>
 
         </nav>
       </div>
 
       <footer>
         <a class="copyright" href="#">© 2020 The New York Times Company</a>
-        <ul>
-          <li><a href="#">NYTCo</a></li>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Work with us</a></li>
-          <li><a href="#">Advertise</a></li>
-          <li><a href="#">T Brand Studio</a></li>
-          <li><a href="#">Your Ad choices</a></li>
-          <li><a href="#">Privacy</a></li>
-          <li><a href="#">Terms of service</a></li>
-          <li><a href="#">Terms of sale</a></li>
-          <li><a href="#">Site map</a></li>
-          <li><a href="#">Help</a></li>
-          <li><a href="#">Subscriptions</a></li>
-        </ul>
+          <ul>
+            <li><a href="#">NYTCo</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Work with us</a></li>
+            <li><a href="#">Advertise</a></li>
+            <li><a href="#">T Brand Studio</a></li>
+            <li><a href="#">Your Ad choices</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms of service</a></li>
+            <li><a href="#">Terms of sale</a></li>
+            <li><a href="#">Site map</a></li>
+            <li><a href="#">Help</a></li>
+            <li><a href="#">Subscriptions</a></li>
+          </ul>
       </footer>
     
   </body>
